@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-05-21T08:09:48Z",
-  "count" : 96,
-  "count_minmax" : [ 96, 97 ],
-  "count_decinc" : [ -1, +0 ],
+  "timestamp" : "2022-05-21T16:09:27Z",
+  "count" : 18,
+  "count_minmax" : [ 18, 97 ],
+  "count_decinc" : [ -79, +0 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 2 ],
   "uniques_decinc" : [ -1, +0 ]
