@@ -1,14 +1,14 @@
 {
-  "timestamp" : "2022-05-21T08:09:48Z",
+  "timestamp" : "2022-05-21T16:09:27Z",
   "count_outdated" : 1299,
   "uniques_outdated" : 73,
-  "count" : 1555,
-  "uniques" : 86,
+  "count" : 1483,
+  "uniques" : 87,
   "views" : [
     {
       "timestamp": "2022-05-07T00:00:00Z",
-      "count": 96,
-      "count_minmax": [ 96, 97 ],
+      "count": 18,
+      "count_minmax": [ 18, 97 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 2 ]
     },
@@ -93,6 +93,13 @@
       "timestamp": "2022-05-20T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-05-21T00:00:00Z",
+      "count": 6,
+      "count_minmax": [ 6, 6 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
