@@ -1,10 +1,10 @@
 {
-  "count": 256,
+  "count": 184,
   "uniques": 2,
   "views": [
     {
       "timestamp": "2022-05-07T00:00:00Z",
-      "count": 96,
+      "count": 18,
       "uniques": 1
     },
     {
@@ -65,6 +65,11 @@
     {
       "timestamp": "2022-05-20T00:00:00Z",
       "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-21T00:00:00Z",
+      "count": 6,
       "uniques": 1
     }
   ]
