@@ -1,3 +1,10 @@
+2022-05-21T16:09:27Z:
+* notice: last 14d: unq all: 2 184
+* notice: prev accum: outdated-unq outdated-all / unq all: 73 1299 / 86 1555
+* notice: next accum: outdated-unq outdated-all / unq all: 73 1299 / 87 1483
+* notice: prev exec diff / last date diff / accum: unq all: +1 +6 -0 -78 / +1 +6 -0 -0 / 1 6
+* notice: changed dates: [2022-05-07 2022-05-21]
+
 2022-05-21T08:09:48Z:
 * notice: last 14d: unq all: 2 256
 * notice: prev accum: outdated-unq outdated-all / unq all: 73 1299 / 87 1556
